Fix logout menu

--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -55,6 +55,8 @@
                 class="nav-link dropdown-toggle"
                 href="#"
                 data-toggle="dropdown"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
               >
                 <%= Scrooge.Auth.current_user(@conn).username %>
               </a>
