--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -16,8 +16,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarsExampleDefault"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarsExampleDefault"
         aria-controls="navbarsExampleDefault"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -35,7 +35,8 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
-                data-toggle="dropdown"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
               >
                 Tesla
               </a>
@@ -54,7 +55,6 @@
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
-                data-toggle="dropdown"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
