--- a/lib/scrooge_web/templates/layout/app.html.eex
+++ b/lib/scrooge_web/templates/layout/app.html.eex
@@ -28,12 +28,12 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <%= if Scrooge.Auth.user_signed_in?(@conn) do %>
-            <li class="nav-item <%= active_class(@active, "aemo") %>">
-              <%= link("Aemo", to: Routes.page_path(@conn, :aemo), class: "nav-link") %>
+            <li class="nav-item">
+              <%= link("Aemo", to: Routes.page_path(@conn, :aemo), class: "nav-link " <> active_class(@active, "aemo")) %>
             </li>
-            <li class="nav-item dropdown <%= active_class(@active, "tesla") %>">
+            <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle <%= active_class(@active, "tesla") %>"
                 href="#"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -45,8 +45,8 @@
               </div>
             </li>
             <%= if Scrooge.Auth.user_is_admin?(@conn) do %>
-              <li class="nav-item <%= active_class(@active, "users") %>">
-                <%= link("Users", to: Routes.user_path(@conn, :index), class: "nav-link") %>
+              <li class="nav-item">
+                <%= link("Users", to: Routes.user_path(@conn, :index), class: "nav-link " <> active_class(@active, "users")) %>
               </li>
             <% end %>
 
@@ -64,8 +64,8 @@
               </div>
             </li>
           <% else %>
-            <li class="nav-item <%= active_class(@active, "login") %>">
-              <%= link("Login", to: Routes.session_path(@conn, :new), class: "nav-link") %>
+            <li class="nav-item">
+              <%= link("Login", to: Routes.session_path(@conn, :new), class: "nav-link " <> active_class(@active, "login") ) %>
             </li>
           <% end %>
         </ul>
