--- a/lib/scrooge_web/templates/user/edit.html.heex
+++ b/lib/scrooge_web/templates/user/edit.html.heex
@@ -1,6 +1,6 @@
 <h1>Edit User</h1>
 
-<%= form_for @changeset, Routes.user_path(@conn, :update, @user), fn f -> %>
+<.form let={f} for={@changeset} action={Routes.user_path(@conn, :update, @user)}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -14,4 +14,4 @@
     <span><%= submit "Save" , class: "btn btn-primary" %></span>
     <span><%= link "Back", to: Routes.user_path(@conn, :index), class: "btn btn-secondary" %></span>
   </div>
-<% end %>
+</.form>
