--- a/lib/scrooge_web/templates/user/password.html.heex
+++ b/lib/scrooge_web/templates/user/password.html.heex
@@ -1,6 +1,6 @@
 <h1>Change User Password for <%= @user.username %></h1>
 
-<%= form_for @changeset, Routes.user_path(@conn, :password_edit, @user), fn f -> %>
+<.form let={f} for={@changeset}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>oops, something went wrong! please check the errors below.</p>
@@ -14,4 +14,4 @@
     <span><%= submit "Save" , class: "btn btn-primary" %></span>
     <span><%= link "Back", to: Routes.user_path(@conn, :index), class: "btn btn-secondary" %></span>
   </div>
-<% end %>
+</.form>
