--- a/lib/scrooge_web/templates/page/index.html.heex
+++ b/lib/scrooge_web/templates/page/index.html.heex
@@ -4,10 +4,10 @@
 <%= if Scrooge.Auth.user_signed_in?(@conn) do %>
   <ul>
     <li>
-      <%= link "Telsa", to: Routes.page_path(@conn, :tesla) %>
+      <%= link "Telsa", to: Routes.tesla_path(@conn, :index) %>
     </li>
     <li>
-      <%= link "Aemo", to: Routes.page_path(@conn, :aemo) %>
+      <%= link "Aemo", to: Routes.aemo_path(@conn, :index) %>
     </li>
     <li>
       <%= link "Logout", to: Routes.session_path(@conn, :logout), method: :post %>
