--- a/lib/scrooge_web/templates/page/index.html.heex
+++ b/lib/scrooge_web/templates/page/index.html.heex
@@ -1,7 +1,7 @@
 <h1><%= gettext "Welcome to %{name}!", name: "Scrooge" %></h1>
 <p>Protect your money from energy companies.</p>
 
-<%= if Scrooge.Auth.user_signed_in?(@conn) do %>
+<%= if Scrooge.User.user_signed_in?(@conn.assigns.user) do %>
   <ul>
     <li>
       <%= link "Telsa", to: Routes.tesla_path(@conn, :index) %>
