--- a/lib/scrooge_web/templates/layout/root.html.heex
+++ b/lib/scrooge_web/templates/layout/root.html.heex
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <%= link("Scrooge", to: Routes.page_path(@conn, :index), class: "navbar-brand") %>
+      <%= live_redirect("Scrooge", to: Routes.page_path(@conn, :index), class: "navbar-brand") %>
       <button
         class="navbar-toggler"
         type="button"
@@ -30,14 +30,14 @@
           <% user = ScroogeWeb.Auth.current_user(@conn) %>
           <%= if user != nil do %>
             <li class="nav-item">
-              <%= link("Aemo", to: Routes.aemo_path(@conn, :index), class: link_class(@active, "aemo")) %>
+              <%= live_redirect("Aemo", to: Routes.aemo_path(@conn, :index), class: link_class(@active, "aemo")) %>
             </li>
             <li class="nav-item">
-              <%= link("Tesla", to: Routes.tesla_path(@conn, :index), class: link_class(@active, "tesla")) %>
+              <%= live_redirect("Tesla", to: Routes.tesla_path(@conn, :index), class: link_class(@active, "tesla")) %>
             </li>
             <%= if ScroogeWeb.Auth.user_is_admin?(user) do %>
               <li class="nav-item">
-                <%= link("Dashboard", to: Routes.live_dashboard_path(@conn, :home), class: link_class(@active, "dashboard")) %>
+                <%= live_redirect("Dashboard", to: Routes.live_dashboard_path(@conn, :home), class: link_class(@active, "dashboard")) %>
               </li>
             <% end %>
 
@@ -51,12 +51,12 @@
                 <%= user["name"] %>
               </a>
               <div class="dropdown-menu">
-                <%= link "Logout", to: Routes.page_path(@conn, :logout), method: :post, class: "dropdown-item" %>
+                <%= live_redirect "Logout", to: Routes.page_path(@conn, :logout), method: :post, class: "dropdown-item" %>
               </div>
             </li>
           <% else %>
             <li class="nav-item">
-              <%= link("Login", to: Routes.page_path(@conn, :login), class: link_class(@active, "login") ) %>
+              <%= live_redirect("Login", to: Routes.page_path(@conn, :login), class: link_class(@active, "login") ) %>
             </li>
           <% end %>
         </ul>
