--- a/lib/scrooge_web/templates/layout/root.html.heex
+++ b/lib/scrooge_web/templates/layout/root.html.heex
@@ -51,7 +51,7 @@
                 <%= user["name"] %>
               </a>
               <div class="dropdown-menu">
-                <%= live_redirect "Logout", to: Routes.page_path(@conn, :logout), method: :post, class: "dropdown-item" %>
+                <%= link "Logout", to: Routes.page_path(@conn, :logout), method: :post, class: "dropdown-item" %>
               </div>
             </li>
           <% else %>
