Add life360 tracking support

--- a/lib/scrooge_web/live/tesla.html.heex
+++ b/lib/scrooge_web/live/tesla.html.heex
@@ -19,6 +19,8 @@
 
 <pre><%= inspect(@tesla, pretty: true) %></pre>
 
+<pre><%= inspect(@life360, pretty: true) %></pre>
+
   <table class="table">
     <tbody>
       <%= if valid(@tesla.since) do %>
